langtools/test/tools/javac/annotations/6359949/T6359949a.out
T6359949a.java:15:5: compiler.err.method.does.not.override.superclass
1 error
